A little more work on Part II.

--- a/icons.tex
+++ b/icons.tex
@@ -3270,6 +3270,420 @@ image is a hymn of praise, a manifestation, a
 lasting token of those who have fought and con 
 quered, and of demons humbled and put to flight. 
 
+\switchGreek
+
+Οὐ βασιλέων ἐστὶ νομοθετεῖν τῇ Ἐκκλησίᾳ. Ὅρα γάρ, τί φησιν ὁ θεῖος Ἀπόστολος·
+«Καὶ οὓς μὲν ἔθετο ὁ Θεὸς ἐν τῇ Ἐκκλησίᾳ πρῶτον ἀποστόλους, δεύτερον προφήτας,
+τρίτον ποιμένας καὶ διδασκάλους, πρὸς τὸν καταρτισμὸν τῆς Ἐκκλησίας», – οὐκ
+εἶπε \emph{βασιλεῖς}–καὶ πάλιν «πείθεσθε τοῖς ἡγουμένοις ὑμῶν καὶ ὑπείκετε· αὐτοὶ γὰρ
+ἀγρυπνοῦσιν ὑπὲρ τῶν ψυχῶν ὑμῶν ὡς λόγον ἀποδώσαντες.» καὶ αὖθις «μνη μονεύετε
+τῶν ἡγουμένων ὑμῶν, οἵτινες ἐλάλησαν ὑμῖν τὸν λόγον, ὧν ἀναθεωροῦντες τὴν
+ἀναστροφὴν ζηλοῦτε τὴν πίστιν.» Οὐκ ἐλάλησαν ἡμῖν τὸν λόγον βασιλεῖς, ἀλλὰ
+ἀπόστολοι καὶ προφῆται ποιμένες τε καὶ διδάσκαλοι. Τῷ Δαυὶδ ἐντειλάμενος ὁ
+Θεὸς οἰκοδομῆσαι αὑτῷ οἶκον ἔφη πρὸς αὐτόν, ὅτι «οὐκ οἰκοδομήσεις μοι σὺ
+οἶκον, ἐπειδὴ ἀνὴρ αἱμάτων εἶ σύ». «Ἀπόδοτε πᾶσι τὰς ὀφειλάς», ὁ Ἀπόστολος
+ἀνακέκραγε Παῦλος, «τῷ τὴν τιμὴν τὴν τιμήν, τῷ τὸν φόβον τὸν φόβον, τῷ τὸν
+φόρον τὸν φόρον, τῷ τὸ τέλος τὸ τέλος.» Βασιλέων ἐστὶν ἡ πολιτικὴ εὐταξία, ἡ
+δὲ ἐκκλησιαστικὴ κατάστασις ποιμένων καὶ διδασκάλων. Λῃστρικὴ ἔφοδός ἐστιν
+αὕτη, ἀδελφοί. Ὁ Σαοὺλ τὸ ἱμάτιον τοῦ Σαμουὴλ ἔσχισε, καὶ τί πέπονθεν; Ἔσχισε
+τὴν βασιλείαν αὐτοῦ ὁ Θεὸς καὶ δέδωκεν αὐτὴν Δαυὶδ τῷ πρᾳοτάτῳ. Τὸν Ἡλίαν
+Ἰεζάβελ ἐδίωξε, καὶ οἱ κύνες ἐλούσαντο ἐν τῷ αὐτῆς αἵματι. Ἡρῴδης ἀνεῖλε τὸν
+Ἰωάννην καὶ σκωληκόβροτος γενόμενος ἐξέψυξε. Καὶ νῦν ὁ μακάριος Γερμανὸς ὁ βίῳ
+καὶ λόγῳ ἐξαστράπτων ἐρραπίσθη καὶ ἐξόριστος γέγονε, καὶ ἕτεροι πλεῖστοι
+ἐπίσκοποι καὶ Πατέρες, ὧν οὐκ οἴδαμεν τὰ ὀνόματα. Οὐ λῃστρικὸν τοῦτο; Ὁ
+Κύριος, ὅτε πειραστικῶς αὐτῷ οἱ Γραμματεῖς καὶ οἱ Φαρισαῖοι προσῄεσαν, ἵνα
+παγιδεύσωσιν αὐτὸν λόγῳ, καὶ ἐπηρώτησαν αὐτόν, εἰ «ἔξεστι δοῦναι κῆνσον
+καίσαρι», πρὸς οὓς ἀπεκρίνατο· «Ἀγάγετέ μοι νόμισμα.» Τῶν δὲ ἀγαγόντων ἔφη·
+«Τίνος ἔχει τὴν εἰκόνα;» Τῶν δὲ φησάντων «Καίσαρος» λέγει· «Ἀπόδοτε τὰ τοῦ
+Καίσαρος Καίσαρι καὶ τὰ τοῦ Θεοῦ τῷ Θεῷ.» Ὑπείκομέν σοι, ὦ βασιλεῦ, ἐν τοῖς
+κατὰ τὸν βίον πράγμασι, φόροις, τέλεσι, δοσοληψίαις, ἐν οἷς σοι τὰ καθ’ ἡμᾶς
+ἐγκεχείρισται· ἐν δὲ τῇ ἐκκλησιαστικῇ καταστάσει ἔχομεν τοὺς ποιμένας τοὺς
+λαλήσαντας ἡμῖν τὸν λόγον καὶ τυπώσαντας τὴν ἐκκλησιαστικὴν θεσμοθεσίαν. Οὐ
+μεταίρομεν ὅρια αἰώνια, ἃ ἔθεντο οἱ πατέρες ἡμῶν, ἀλλὰ κατέχομεν τὰς
+παραδόσεις, καθὼς παρελάβομεν· εἰ γὰρ ἀρξόμεθα τὴν οἰκοδομὴν τῆς Ἐκκλησίας καὶ
+ἐν μικρῷ καθαιρεῖν, κατὰ μικρὸν τὸ πᾶν καταλυθήσεται.
+
+\switchEnglish
+
+Kings have no call to make laws in the 
+Church. What does the holy apostle say? 
+`And God, indeed, hath set some in the church, 
+first apostles, secondly prophets, thirdly doctors 
+and shepherds' for the training of the Church. 
+He does not say `kings'. And again : `Obey 
+your prelates, and be subject to them. For 
+they watch as being to render an account of 
+your souls.' Again : `Remember your prelates 
+who have spoken the word of God to you, 
+whose faith follow, considering the end of your 
+conversation.' Kings have not spoken the 
+word to you, but apostles and prophets, 
+pastors and doctors. When God was speaking 
+to David about building a house for Him, He 
+said : `Thou shalt not build me a house, for 
+thou art a man of blood.' `Render, therefore, 
+to all men their dues,' St. Paul exclaimed ; 
+`tribute to whom tribute is due, custom to 
+whom custom, fear to whom fear, honour to 
+whom honour.' The political prosperity is the 
+king's business : the ecclesiastical organisation 
+belongs to pastors and doctors, and to take it 
+out of their hands is to commit an act of 
+robbery. Saul rent Samuel's cloak, and what 
+was the consequence ? God took from him his 
+royalty, and gave it to the meek David. 
+Jezabel pursued Elias, pigs and dogs licked up 
+her blood, and harlots were bathed in it. 
+Herod removed John, and was consumed by 
+worms. And now holy Germanus, shining by 
+word and example, has been punished and 
+become an exile, and many more bishops and 
+fathers, whose names are unknown to us. Is 
+not this a persecution ? When the Pharisees 
+and the learned surrounded our Lord, ostensibly 
+to listen to His teaching, and when they asked 
+Him if it was lawful to pay tribute to Caesar, 
+He answered them : `Bring me a coin.' And 
+when they had brought it, He said : `Whose 
+image is this?' Upon their reply, `Caesar's,' 
+He said, `Give to Caesar that which is Caesar's 
+and to God that which is God's.' We are 
+obedient to you, O King, in things concerning 
+our daily life, in tributes, taxes, and payments, 
+which are your due ; but in ecclesiastical 
+government we have our pastors, preachers of 
+the word, and exponents of ecclesiastical law. 
+We do not change the boundaries marked out 
+by our fathers : we keep the tradition we have 
+received. If we begin to lay down the law to 
+the Church, even in the smallest thing, the 
+whole edifice will fall to the ground in no 
+short time. 
+
+\switchGreek
+
+Κακίζεις τὴν ὕλην καὶ ἄτιμον ἀποκαλεῖς. Τοῦτο καὶ Μανιχαῖοι, ἀλλ’ ἡ θεία
+γραφὴ καλὴν ταύτην ἀνακηρύττει· φησὶ γάρ· «Καὶ εἶδεν ὁ θεὸς πάντα, ὅσα
+ἐποίησε, καὶ ἰδοὺ καλὰ λίαν.» Ἐγὼ μὲν οὖν καὶ θεοῦ ποίημα τὴν ὕλην καὶ
+καλὴν ταύτην ὁμολογῶ, σὺ δέ, εἰ κακὴν ταύτην λέγεις, ἢ οὐκ ἐκ θεοῦ ταύτην
+ὁμολογεῖς ἢ τῶν κακῶν αἴτιον ποιεῖς τὸν θεόν. Ὅρα οὖν, τί φησιν ἡ θεία
+γραφὴ περὶ τῆς ὕλης, ἣν σὺ ἄτιμον ἀποκαλεῖς. «Καὶ εἶπε Μωσῆς πρὸς πᾶσαν
+συναγωγὴν υἱῶν Ἰσραὴλ λέγων· Τοῦτο τὸ ῥῆμα, ὃ συνέταξε κύριος λέγων· Λάβετε
+παρ’ ὑμῶν αὐτῶν ἀφαίρεμα τῷ κυρίῳ, πᾶς ὁ καταδεχόμενος τῇ καρδίᾳ, οἴσουσι
+τὰς ἀπαρχὰς τῷ κυρίῳ χρυσίον, ἀργύριον, χαλκόν, ὑάκινθον, πορφύραν,
+κόκκινον διπλοῦν διανενησμένον καὶ βύσσον κεκλωσμένην καὶ τρίχας αἰγείας
+καὶ δέρματα κριῶν ἠρυθροδανωμένα καὶ δέρματα ὑακίνθινα καὶ ξύλα ἄσηπτα καὶ
+ἔλαιον τῆς χρίσεως καὶ τὸ θυμίαμα τῆς συνθέσεως καὶ λίθους σαρδίους καὶ
+λίθους εἰς τὴν γλυφήν, εἰς τὴν ἐπωμίδα καὶ τὸν ποδήρη· καὶ πᾶς σοφὸς καρδίᾳ
+ἐν ὑμῖν ἐλθὼν ἐργαζέσθω πάντα, ὅσα συνέταξε κύριος, τὴν σκηνήν.»
+
+\switchEnglish
+
+You look down upon matter and call it con 
+temptible. This is what the Manicheans did, 
+but holy Scripture pronounces it to be good ; 
+for it says, `And God saw all that He had 
+made, and it was very good.' I say matter is 
+God's creation and a good thing. Now, if you 
+say it is bad, you say either that it is not from 
+God, or you make Him a cause of evil. Listen 
+to the words of Scripture concerning matter, 
+which you despise : `And Moses said to all the 
+assembly of the children of Israel : This is 
+the word the Lord hath commanded, saying : 
+Set aside with you first fruits to the Lord ; 
+let every one that is willing and hath a ready 
+heart, offer them to the Lord : gold, and silver, 
+and brass, violet and purple, and scarlet twice 
+dyed, and fine linen, goat's hair, and ram's 
+skins dyed red, and violet, and coloured skins, 
+selimwood, and oil to maintain lights, and to 
+make ointment, and most sweet incense, onyx 
+stones and precious stones for the adorning of 
+the ephod and the rational : Whosoever of you is 
+.wise let him come and make that which the Lord 
+hath commanded : to wit, the tabernacle,' etc. 
+
+\switchGreek
+
+Ἰδοὺ δὴ καὶ ἡ ὕλη τιμᾶται ἡ καθ’ ὑμᾶς ἄτιμος. Τί γὰρ τριχῶν αἰγείων
+εὐτελέστερον καὶ χρωμάτων; Ἢ οὐ χρώματα τὸ κόκκινον καὶ ἡ πορφύρα καὶ ἡ
+ὑάκινθος; Ἰδοὺ δὴ καὶ ἔργα χειρῶν ἀνθρώπων καὶ ὁμοίωμα χερουβίμ· καὶ αὐτὴ
+δὲ ἡ σκηνὴ ἅπασα εἰκὼν ἦν. «Ὅρα γάρ», φησὶν ὁ θεὸς τῷ Μωσῇ, «ποιήσεις πάντα
+κατὰ τὸν τύπον τὸν δειχθέντα σοι ἐν τῷ ὄρει.» Καὶ ὅμως κυκλόθεν
+προσεκυνεῖτο ὑπὸ παντὸς τοῦ Ἰσραήλ. Τί δὲ τὰ χερουβίμ; Οὐ κατενώπιον ἦσαν
+τοῦ λαοῦ; Καὶ ἡ κιβωτὸς καὶ ἡ λυχνία καὶ ἡ τράπεζα καὶ ἡ στάμνος ἡ χρυσῆ
+καὶ ἡ ῥάβδος, πρὸς ἃ βλέπων ὁ λαὸς προσεκύνει; Οὐ προσκυνῶ τῇ ὕλῃ, προσκυνῶ
+δὲ τὸν τῆς ὕλης δημιουργόν, τὸν ὕλην δι’ ἐμὲ γενόμενον καὶ ἐν ὕλῃ τὴν
+κατοίκησιν θέμενον καὶ δι’ ὕλης τὴν σωτηρίαν μου ἐργασάμενον. «Ὁ γὰρ λόγος
+σὰρξ ἐγένετο καὶ ἐσκήνωσεν ἐν ἡμῖν.» Πᾶσι δὲ δῆλον, ὅτι ἡ σὰρξ ὕλη καὶ
+κτίσμα ἐστίν. Σέβω οὖν τὴν ὕλην καὶ δι’ αἰδοῦς ἄγω καὶ προσκυνῶ, δι’ ἧς ἡ
+σωτηρία μου γέγονε, σέβω δὲ οὐχ ὡς θεόν, ἀλλ’ ὡς θείας ἐνεργείας καὶ
+χάριτος ἔμπλεων. Ἦ οὐχ ὕλη τὸ τοῦ σταυροῦ ξύλον τὸ τρισόλβιόν τε καὶ
+τρισμακάριστον; Ἦ οὐχ ὕλη τὸ ὄρος τὸ σεπτὸν καὶ ἅγιον, ὁ τοῦ κρανίου τόπος;
+Ἦ οὐχ ὕλη ἡ ζωηφόρος πέτρα, ὁ τάφος ὁ ἅγιος, ἡ πηγὴ τῆς ἡμῶν ἀναστάσεως; Ἦ
+οὐχ ὕλη τὸ μέλαν καὶ τὰ τῶν εὐαγγελίων δέρματα; Ἦ οὐχ ὕλη ἡ ζωοποιὸς
+τράπεζα ἡ τὸν ἄρτον ἡμῖν τῆς ζωῆς χορηγοῦσα; Ἦ οὐχ ὕλη ὁ χρυσός τε καὶ ὁ
+ἄργυρος, ἐξ ὧν σταυροί τε καὶ πίνακες ἅγιοι κατασκευάζονται καὶ ποτήρια; Ἦ
+οὐχ ὕλη πρὸ τούτων ἁπάντων τὸ τοῦ κυρίου μου σῶμα καὶ αἷμα; Ἢ πάντων τούτων
+ἄνελε τὸ σέβας καὶ τὴν προσκύνησιν ἢ παραχώρει τῇ ἐκκλησιαστικῇ παραδόσει
+καὶ τὴν τῶν εἰκόνων προσκύνησιν θεοῦ καὶ φίλων θεοῦ ὀνόματι ἁγιαζομένων καὶ
+διὰ τοῦτο θείου πνεύματος ἐπισκιαζομένων χάριτι. Εἰ διὰ τὸν νόμον τὰς
+εἰκόνας ἀπαγορεύεις, ὥρα σοι καὶ σαββατίζειν καὶ περιτέμνεσθαι–ταῦτα γὰρ
+ἀπαραχωρήτως ὁ νόμος κελεύει–καὶ πάντα τὸν νόμον τηρεῖν καὶ μὴ ἑορτάζειν τὸ
+πάσχα κυρίου ἔξω Ἱερουσαλήμ– ἀλλὰ γνῶτε, ὡς, ἐὰν τὸν νόμον τηρῆτε, Χριστὸς
+ὑμᾶς οὐδὲν ὠφελεῖ–, ὥρα σοι καὶ τὴν τοῦ ἀδελφοῦ γυναῖκα πρὸς γάμον ἄγεσθαι
+καὶ ἐγείρειν σπέρμα τῷ ἀδελφῷ καὶ μὴ ᾄδειν τὴν ᾠδὴν κυρίου ἐπὶ γῆς
+ἀλλοτρίας. Ἀλλ’ ἄπαγε· «οἵτινες γὰρ ἐν νόμῳ δικαιοῦσθε, τῆς χάριτος
+ἐξεπέσατε.»
+
+\switchEnglish
+
+Behold, then, matter is honoured, and you 
+dishonour it. What is more insignificant than 
+goat's hair, or colours, and are not violet and 
+purple and scarlet colours ? And the likeness 
+of the cherubim are the work of man s hand, 
+and the tabernacle itself from first to last was 
+an image. `Look,' said God to Moses, `and 
+make it according to the pattern that was 
+shown thee in the Mount,' and it was adored by 
+the people of Israel in a circle. And, as to the 
+cherubim, were they not in sight of the people ? 
+And did not the people look at the ark, and 
+the lamps, and the table, the golden urn and 
+the staff, and adore ? It is not matter which I 
+adore ; it is the Lord of matter, becoming 
+matter for my sake, taking up His abode in 
+matter and working out my salvation through 
+matter. For the Word was made Flesh, and 
+dwelt amongst us. It is evident to all that 
+flesh is matter, and that it is created. I 
+reverence and honour matter, and worship that 
+which has brought about my salvation. I 
+honour it, not as God, but as a channel of 
+divine strength and grace. Was not the thrice 
+blessed wood of the Cross matter ? and the 
+sacred and holy mountain of Calvary ? Was 
+not the holy sepulchre matter, the life-giving 
+stone the source of our resurrection ? Was not 
+the book of the Gospels matter, and the holy table 
+which gives us the bread of life ? Are not gold 
+and silver matter, of which crosses, and holy 
+pictures, and chalices are made ? And above 
+all, is not the Lord's Body and Blood composed 
+of matter ? Either reject the honour and 
+worship of all these things, or conform to 
+ecclesiastical tradition, sanctifying the worship 
+of images in the name of God and of God's 
+friends, and so obeying the grace of the Divine 
+Spirit. If you give up images on account of 
+the law, you should also keep the Sabbath and 
+be circumcised, for these are severely inculcated 
+by it. You should observe all the law, and not 
+celebrate the Lord's Passover out of Jerusalem. 
+But you must know that if you observe the 
+law, Christ will profit you nothing. You are 
+ordered to marry your brother s wife, and so 
+carry on his name, and not to sing the song of 
+the Lord in a strange land. Enough of this! 
+Those who have been justified by the law have 
+fallen from grace. 
+
+\switchGreek
+
+Ἱστοροῦμεν Χριστὸν τὸν βασιλέα καὶ κύριον οὐ γυμνοῦντες αὐτὸν τοῦ
+στρατεύματος· στρατὸς γὰρ τοῦ κυρίου οἱ ἅγιοι. Γυμνωσάτω ἑαυτὸν τοῦ οἰκείου
+στρατεύματος ὁ ἐπίγειος βασιλεὺς καὶ τότε τὸν ἑαυτοῦ βασιλέα καὶ κύριον.
+Ἀποθέσθω τὴν ἁλουργίδα καὶ τὸ διάδημα καὶ τότε τῶν κατὰ τοῦ τυράννου
+ἀριστευσάντων καὶ βασιλευσάντων τῶν παθῶν τὸ σέβας περιαιρείτω. Εἰ γὰρ
+κληρονόμοι θεοῦ καὶ συγκληρονόμοι Χριστοῦ καὶ τῆς θείας δόξης καὶ βασιλείας
+κοινωνοὶ ἔσονται, πῶς οὐχὶ καὶ τῆς ἐπὶ γῆς δόξης συμμέτοχοι γένωνται οἱ
+φίλοι Χριστοῦ; «Οὐ λέγω ὑμᾶς δούλους», φησὶν ὁ θεός, «ὑμεῖς φίλοι μού
+ἐστε.» Τῆς οὖν δεδομένης αὐτοῖς παρὰ τῆς ἐκκλησίας τιμῆς στερήσωμεν αὐτούς;
+Ὢ θρασείας χειρός. Ὢ τολμηρᾶς γνώμης ἀνταιρούσης θεῷ καὶ τοῖς αὐτοῦ
+ἀντιπραττούσης προστάγμασιν. Οὐ προσκυνεῖς εἰκόνι, μηδὲ τῷ υἱῷ τοῦ θεοῦ
+προσκύνει, «ὅς ἐστιν εἰκὼν τοῦ ἀοράτου θεοῦ» ζῶσα καὶ χαρακτὴρ
+ἀπαράλλακτος.
+Ὁ ναός, ὃν ὁ Σολομὼν ᾠκοδόμησεν, ἀλόγων αἵμασιν ἐνεκαινίσθη καὶ ἀλόγων
+εἰκόσιν ἐκαλλωπίσθη, λεόντων καὶ βοῶν καὶ φοινίκων καὶ ῥοΐσκων. Νῦν δὲ
+Χριστοῦ αἵματι ἡ ἐκκλησία ἐγκαινίζεται καὶ τῶν ἁγίων αὐτοῦ καὶ τῇ Χριστοῦ
+εἰκόνι καὶ τῶν ἁγίων αὐτοῦ καλλωπίζεται. Ἢ πάσης ὕλης προσκύνησιν ἄνελε ἢ
+μὴ καινοτόμει «μηδὲ μέταιρε ὅρια αἰώνια, ἃ ἔθεντο οἱ πατέρες σου», οὐ τὰ
+πρὸ τῆς ἐνσάρκου παρουσίας Χριστοῦ τοῦ θεοῦ ἡμῶν λέγω, ἀλλὰ τὰ μετὰ τὴν
+ἐπιδημίαν αὐτοῦ. Περὶ γὰρ τῶν ἐν τῇ παλαιᾷ παραδόσεων μεμφόμενος ὁ θεός
+φησιν· «Ἔδωκα αὐτοῖς προστάγματα οὐ καλὰ» κατὰ τὴν σκληροκαρδίαν αὐτῶν.
+Ὥστε «μετατεθείσης τῆς ἱερωσύνης ἐξ ἀνάγκης καὶ νόμου μετάθεσις γέγονεν».
+
+\switchEnglish
+
+Let us set forth Christ, our King and Lord, 
+not depriving Him of His army. The saints 
+are His army. Let the earthly king strip 
+himself of his army, and then of his own 
+dignity. Let him put off the purple and the 
+diadem before he take honour away from his 
+most valiant men who have conquered their 
+passions. For if the friends of Christ are 
+heirs of God and co-heirs of Christ, and are to 
+be partakers of the divine glory and kingdom, 
+is not even earthly glory due to them ? I call 
+you not servants, our Lord says ; you are my 
+friends. Shall we, then, withhold from them 
+the honour which the Church gives them ? 
+You are a bold and venturesome man to fight 
+against God and His ordinances. If you do 
+not worship images, you do not worship the 
+Son of God, who is the living image of the 
+invisible God, and the immutable figure of His 
+substance. The temple which Solomon built 
+was consecrated by the blood of animals, and 
+decorated by images of lions, oxen, and the 
+palms and pomegranates. Now, the Church 
+is consecrated by the blood of Christ and of 
+His saints, and it is adorned with the image of 
+Christ and of His saints. Either take away 
+the worship of images altogether, or be not an 
+innovator, and pass not beyond the ancient 
+boundaries which thy fathers have set. I am 
+not speaking of boundaries prior to the incar 
+nation of Christ our Lord, but since His 
+coming. God spoke to them, depreciating the 
+traditions of the old law, saying, `I also gave 
+them statutes that were not good,' on account 
+of their hardness of heart. Consequently on 
+the change of priesthood the law of necessity 
+was also changed. 
+
+\switchGreek
+
+Οὐ μόνον δὲ γράμμασι τὸν ἐκκλησιαστικὸν θεσμὸν παρέδωκαν οἱ αὐτόπται καὶ
+ὑπηρέται τοῦ λόγου, ἀλλὰ καὶ ἀγράφοις τισὶ παραδόσεσι. Πόθεν γὰρ οἴδαμεν
+τὸν κρανίου τόπον τὸν ἅγιον; Πόθεν τὸ μνῆμα τῆς ζωῆς; Οὐ παῖς παρὰ πατρὸς
+ἀγράφως παραλαβόντες; Τὸ μὲν ἐν τόπῳ κρανίου σταυρωθῆναι τὸν κύρι ον
+γέγραπται καὶ ταφῆναι ἐν μνημείῳ, ὃ ἐλατόμησεν Ἰωσὴφ ἐν τῇ πέτρᾳ· ὅτι δὲ
+ταῦτά ἐστι τὰ νῦν προσκυνούμενα, ἐξ ἀγράφου παραδόσεως οἴδαμεν καὶ πλεῖστα
+τούτοις παρόμοια. Πόθεν τὸ τρίτον βαπτίζειν, τουτέστι διὰ τριῶν καταδύσεων;
+Πόθεν τὸ κατ’ ἀνατολὰς εὔχεσθαι; Πόθεν τὸ προσκυνεῖν σταυρόν; Οὐκ ἐκ τῆς
+ἀγράφου παραδόσεως; Διὸ καὶ ὁ θεῖος ἀπόστολος Παῦλός φησιν· «Ἄρα οὖν,
+ἀδελφοί, στήκετε καὶ κρατεῖτε τὰς παραδόσεις, ἃς ἐδιδάχθητε εἴτε διὰ λόγου,
+εἴτε δι’ ἐπιστολῆς ἡμῶν.» Πολλῶν τοιγαροῦν ἀγράφως τῇ ἐκκλησίᾳ
+παραδεδομένων καὶ μέχρι τοῦ νῦν πεφυλαγμένων, τί περὶ τὰς εἰκόνας
+σμικρολογεῖτε; Μανιχαῖοι συνέγραψαν τὸ κατὰ Θωμᾶν εὐαγγέλιον· γράψατε καὶ
+ὑμεῖς τὸ κατὰ Λέοντα εὐαγγέλιον. Οὐ δέχομαι βασιλέα τυραννικῶς τὴν
+ἱερωσύνην ἁρπάζοντα. Οὐ βασιλεῖς ἔλαβον ἐξουσίαν δεσμεῖν καὶ λύειν. Οἶδα
+Οὐάλεντα βασιλέα χριστιανὸν ὀνομαζόμενον καὶ τὴν ὀρθόδοξον πίστιν διώξαντα,
+Ζήνωνά τε καὶ Ἀναστάσιον, Ἡράκλειον καὶ Κωνσταντῖνον τὸν ἐν Σικελίᾳ καὶ
+Βαρδανίσκην τὸν καὶ Φιλιππικόν. Οὐ πείθομαι βασιλικοῖς κανόσι διατάττεσθαι
+τὴν ἐκκλησίαν, ἀλλὰ πατρικαῖς παραδόσεσιν ἐγγράφοις τε καὶ ἀγράφοις. Ὥσπερ
+γὰρ ἐν ὅλῳ τῷ κόσμῳ ἐγγράφως ἐκηρύχθη τὸ εὐαγγέλιον, οὕτως ἐν ὅλῳ τῷ κόσμῳ
+ἀγράφως παρεδόθη τὸ εἰκονίζειν Χριστὸν τὸν σεσαρκωμένον θεὸν καὶ τοὺς
+ἁγίους, ὥσπερ καὶ προσκυνεῖν τὸν σταυρὸν καὶ κατ’ ἀνατολὰς ἑστῶτας
+προσεύχεσθαι.
+
+\switchEnglish
+
+The eye-witnesses and ministers of the word 
+handed down the teaching of the Church, not 
+only by writing, but also by unwritten tradition. 
+Whence comes our knowledge of the sacred 
+spot, Mount Calvary, of the holy sepulchre ? 
+Has it not been handed down to us from father 
+to son? It is written that our Lord was crucified
+on Calvary, and buried in the tomb which 
+Joseph hewed out of the rock, but it is unwritten
+tradition that teaches us we are adoring 
+the right places, and many other things of the 
+same kind. Why do we believe in three 
+baptisms, that is, in three immersions ? Why 
+do we adore the Cross ? Is it not through 
+tradition ? Therefore the holy apostle says : 
+`Brethren, stand fast ; and hold the traditions 
+which you have learned, whether by word, or 
+by our epistle.' Many things, therefore, being 
+handed down to the Church by unwritten 
+tradition and kept up to the present day, why 
+do you speak slightingly of images ? The 
+Manicheans followed a gospel according to 
+Thomas, and you will follow that of Leo. I 
+do not admit an emperor's tyrannical action 
+in domineering over the Church. The emperor 
+has not received the power to bind and loose. 
+I know of the Emperor Valens, a Christian in 
+name, who persecuted the true faith, Zeno 
+and Anastasius, Heraclius and Constantine of 
+Sicily, and Bardaniskus, called Philip.
+I am not to be persuaded that the 
+Church is set in order by imperial edicts, but 
+by patristic traditions, written and unwritten. 
+As the written Gospel has been preached in 
+the whole world, so has it been an unwritten 
+tradition in the whole world to represent in 
+image Christ, the incarnate God, and the saints, 
+to adore the Cross, and to pray towards the east. 
+
+\switchGreek
+
+Ἃς μέντοι προσάγεις χρήσεις, οὐ τῶν παρ’ ἡμῖν εἰκόνων βδελύσσονται τὴν
+προσκύνησιν, ἀλλὰ τῶν ταύτας θεοποιούντων Ἑλλήνων. Οὐ δεῖ τοίνυν διὰ τὴν
+τῶν Ἑλλήνων ἄτοπον χρῆσιν καὶ τὴν τῆς ἐκκλησίας εὐσεβῶς γινομένην ἀναιρεῖν.
+Ἐφορκίζουσιν ἐπαοιδοί τε καὶ γόητες, ἐφορκίζει τοὺς κατηχουμένους ἡ
+ἐκκλησία, ἀλλ’ ἐκεῖνοι μὲν ἐπικαλούμενοι δαίμονας, αὕτη δὲ θεὸν κατὰ
+δαιμόνων. Ἔθυον δαίμοσιν Ἕλληνες, ἀλλὰ καὶ θεῷ ὁ Ἰσραὴλ καὶ αἵματα καὶ
+κνίσσας προσέφερον· θύει καὶ ἡ ἐκκλησία θεῷ θυσίαν ἀναίμακτον. Δαίμοσι τὰς
+εἰκόνας ἀνετίθουν Ἕλληνες, ἀλλὰ καὶ ὁ Ἰσραὴλ ἐθεοποίησε τὰς εἰκόνας· ἔλεγον
+γάρ· «Οὗτοι οἱ θεοί σου, Ἰσραήλ, οἱ ἀναγαγόντες σε ἐκ τῆς Αἰγύπτου.» Ἡμεῖς
+δὲ ἀληθεῖ θεῷ σαρκωθέντι καὶ θεοῦ δούλοις καὶ φίλοις δαιμόνων ἀπελαύνουσι
+στίφη εἰκόνας ἀνατιθέαμεν.
+
+\switchEnglish
+
+The customs which you bring forward do 
+not incriminate our worship of images, but that 
+of the heathens who make idols of them. The 
+pious practice of the Church is not to be rejected
+because of heathen abuse. Sorcerers 
+and magicians exorcise ; the Church exorcises 
+catechumens. The former invoke demons, 
+the Church calls upon God against demons. 
+Heathens sacrificed to demons ; Israel offered 
+to God both holocausts and victims. The 
+Church, too, offers an unbloody sacrifice to 
+God. Heathens set up images to demons, 
+and Israel made idols of them in the words, 
+`These are thy gods, O Israel, who brought 
+thee out of Egypt.' Now we have set up 
+images to the true God incarnate, to His 
+servants and friends, who have put the demon 
+host to flight.
+
+\switchGreek
+
+Εἰ δὲ λέγεις τὸν μακάριον Ἐπιφάνιον τρανῶς τὰς παρ’ ἡμῖν ἀπαγορεῦσαι
+εἰκόνας, γνῶθι, ὡς ἐπίπλαστος ὁ λόγος ἄλλου τινὸς τῷ τοῦ θείου Ἐπιφανίου
+χρησαμένου ὀνόματι, οἷα πολλὰ συμβαίνει γίνεσθαι. Οὐ γὰρ τοῖς συμπατράσιν ὁ
+πατὴρ μάχεται· ἑνὸς γὰρ ἁγίου πνεύματος μέτοχοι πάντες γεγόνασι· καὶ μάρτυς
+ἡ αὐτοῦ ἐκκλησία εἰ κόσι καλλωπιζομένη, ἕως οὗ ὁ ἄγριος καὶ ἀνήμερος Λέων
+ἔβρυξεν καὶ τὴν Χριστοῦ διετάραξε ποίμνην ποτίσαι τὸν λαὸν τοῦ θεοῦ
+ἐπιχειρήσας ἀνατροπὴν θολεράν.
+
+\switchEnglish
+
+If you say to this that blessed 
+Epiphanius clearly rejected our use of images, 
+you must know that the work in question is 
+spurious and written by some one else in the 
+name of Epiphanius, as often happens. A 
+father does not fight his own children. All 
+have become participators in the one Spirit. 
+The Church is a witness of this in adorning 
+images, until some men rose up against her 
+and disturbed the peace of Christ's fold, putting 
+poisoned food before the people of God. 
+
+
+
+
 \end{paracol}
 
 \end{document}
